# ysu-programming-with-python-course

./: .gitignore  LICENSE  README.md  requirement.txt  requirements.txt
2023-spring/: README.md
2023-spring/lectures/: Lecture01.ipynb  Lecture02.ipynb  Lecture06.ipynb  Lecture08.ipynb  Lecture09.ipynb  Lecture11.ipynb  Lecture13.ipynb  Lecture14.ipynb  Lecture15.ipynb  Lecture17.ipynb  Lecture18.ipynb  Lecture22.ipynb  Lecture24.ipynb  Lecture27.ipynb
2025-spring/: README.md
2025-spring/homeworks/: Homework01.md  Homework02.md  Homework03.md
2025-spring/lectures/: Lecture01.ipynb  Lecture02.ipynb  Lecture03.ipynb  (+2 more)
2025-spring/lectures/Lecture14/book-api/: pyproject.toml
2025-spring/lectures/Lecture14/book-api/src/book_api/: __init__.py  main.py
2025-spring/lectures/Lecture14/book-api/src/book_api/database/: connection.py
2025-spring/lectures/Lecture14/book-api/src/book_api/models/: book.py
2025-spring/lectures/Lecture14/book-api/src/book_api/routers/: books.py
2025-spring/lectures/Lecture14/book-api/src/book_api/services/: book_service.py
homeworks/: Homework01.md  Homework02.md
lectures/: Lecture 01.ipynb  Lecture01.ipynb  Lecture03.ipynb  Lecture04.ipynb  Lecture05.ipynb  Lecture06.ipynb  Lecture07.ipynb  Lecture08.ipynb  Lecture09.ipynb  Lecture10.ipynb  Lecture11.ipynb  Lecture12.ipynb  Lecture13.ipynb  Lecture14.ipynb  Lecture15.ipynb  Lecture16.ipynb  Lecture18.ipynb  Lecture19.ipynb  Lecture20.ipynb  Lecture21.ipynb  Lecture22.ipynb  Lecture23.ipynb  Lecture24.ipynb  Lecture25.ipynb  Lecture26.ipynb  Lecture28.ipynb  Lecture29.ipynb
(+109 files in other folders)
